--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
   "devDependencies": {
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
-  }
+  },
+  "homepage": "https://myusername.github.io/my-app"
 }
